# GjOBS

./: CMakeLists.txt  CMakeUserPresets.json
GjOBS/: CMakeLists.txt  screenrecorder.cpp  screenrecorder.h
GjOBS/hdr/: AudioCoder.h  AudioEncoder.h  Coder.h  Encoder.h  VideoCoder.h  ffmpegManager.h  outputdevice.h  screenWindow.h  screenrecorder.h  settings.h
GjOBS/hdr/AudioCodersHdr/: AACAudioCoder.h  FLACAudioCoder.h  MP3AudioCoder.h
GjOBS/hdr/AudioEncodersHdr/: AACAudioEncoder.h
GjOBS/hdr/VideoCodersHdr/: H_264VideoCoder.h  H_264_NVENC_VideoCoder.h
GjOBS/src/: ffmpegManager.cpp  main.cpp  outputdevice.cpp  screenWindow.cpp  screenrecorder.cpp  settings.cpp
GjOBS/src/AudioCodersSrc/: AACAudioCoder.cpp  FLACAudioCoder.cpp  MP3AudioCoder.cpp
GjOBS/src/AudioEncodersSrc/: AACAudioEncoder.cpp
GjOBS/src/VideoCodersSrc/: H_264VideoCoder.cpp  H_264_NVENC_VideoCoder.cpp
GjOBS/src/qml/: AppTheme.qml  ChooseScreen.qml  GjButton.qml  Settings.qml  ToolsLayout.qml  main.qml
